Testing and bug fixing: 1. tested 2. personal files were tested 3. bugs with item sizes, selection changing and other 4. PersFile.xml: alert messages

--- a/Calendar/Calendar.Windows/MainPage.xaml
+++ b/Calendar/Calendar.Windows/MainPage.xaml
@@ -281,7 +281,12 @@
                                            VerticalAlignment="Center" 
                                            HorizontalAlignment="Center" 
                                            TextAlignment="Center"/>
-                                <ListView x:Name="listOfHolidays" Width="auto" HorizontalAlignment="Stretch" Height="auto" ManipulationMode="None" SelectionMode="None" VerticalAlignment="Stretch"/>
+                                <ListView x:Name="listOfHolidays" 
+                                          Width="auto" MinHeight="440" 
+                                          HorizontalAlignment="Stretch" 
+                                          ManipulationMode="None" 
+                                          SelectionMode="None" 
+                                          VerticalAlignment="Stretch"/>
                                 <ListView HorizontalAlignment="Center" 
                                           Height="auto" Padding="0" 
                                           ManipulationMode="None" 
