New highlighting colors and rules for selection changing 1. overriden standard brushed in App.xaml 2. the new rule for selection changing in noteGrid (for predefined types of holidays) 3. changes in Holidays.xaml (programmers' day turned into "movable") 4. padding and border for GVI on calGrid (changes appeared in CalendarDictionary.xaml)

--- a/Calendar/Calendar.Shared/App.xaml
+++ b/Calendar/Calendar.Shared/App.xaml
@@ -3,5 +3,18 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Calendar">
-
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Default">
+                    <SolidColorBrush x:Key="ComboBoxItemPointerOverBackgroundThemeBrush" Color="#99303030" />
+                    <SolidColorBrush x:Key="ComboBoxItemSelectedBackgroundThemeBrush" Color="#FF303030" />
+                    <SolidColorBrush x:Key="ListViewItemPointerOverBackgroundThemeBrush" Color="#4DFFFFFF" />
+                    <SolidColorBrush x:Key="ListViewItemSelectedBackgroundThemeBrush" Color="#ff303030" />
+                    <SolidColorBrush x:Key="ListViewItemSelectedForegroundThemeBrush" Color="#ff303030" />
+                    <SolidColorBrush x:Key="ListViewItemSelectedPointerOverBackgroundThemeBrush" Color="#ff303030" />
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
