Final fixations for current version: 1. version number checking; 2. selection highlight for buttons 3. tested with and without files (PersData.xml and <ColorStyle>.xaml)

--- a/Calendar/Calendar.Shared/App.xaml
+++ b/Calendar/Calendar.Shared/App.xaml
@@ -13,6 +13,8 @@
                     <SolidColorBrush x:Key="ListViewItemSelectedBackgroundThemeBrush" Color="#ff303030" />
                     <SolidColorBrush x:Key="ListViewItemSelectedForegroundThemeBrush" Color="#ff303030" />
                     <SolidColorBrush x:Key="ListViewItemSelectedPointerOverBackgroundThemeBrush" Color="#ff303030" />
+                    <SolidColorBrush x:Key="ButtonPointerOverBackgroundThemeBrush" Color="#FF5C5C5C" />
+                    <SolidColorBrush x:Key="ButtonPointerOverForegroundThemeBrush" Color="White" />
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
