--- a/Calendar/Calendar.Windows/MainPage.xaml
+++ b/Calendar/Calendar.Windows/MainPage.xaml
@@ -14,6 +14,8 @@
 
     <Page.Resources>
         <ResourceDictionary>
+            <SolidColorBrush x:Name="TransparentBrush" x:Key="MainNoteBackground" Color="Transparent"/>
+            <SolidColorBrush x:Name="DarkNoteBackground" x:Key="DarkNoteBackground" Color="#FFF0F0F2"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="themes/CalendarDictionary.xaml" x:Name="Main"/>
                 <ResourceDictionary>
@@ -88,6 +90,7 @@
                             HorizontalAlignment="Left" 
                             Margin="20, 0, 10, 0"
                             BorderThickness="0" 
+                            IsHoldingEnabled="False"
                             VerticalAlignment="Center" >
                         <Button.Background>
                             <ImageBrush Stretch="Fill" ImageSource="Assets/arrow-left.png"/>
