mostly WP application and data Windows Phone 1. 2 buttons beneath calGrid for scrolling to adjacent month 2. fixed bug with noteList's Height and the same with calGrid Other: 1. Application's name, short name and description in Resource.resw 2. <data from option 1> displayes in both applications automaticaly

--- a/Calendar/Calendar.Windows/MainPage.xaml
+++ b/Calendar/Calendar.Windows/MainPage.xaml
@@ -268,7 +268,7 @@
                         Content="..."
                         Tapped="GridViewItem_Tapped" />
                     <FlyoutBase.AttachedFlyout>
-                        <Flyout x:Name="butHolidayFlyout" 
+                        <Flyout x:Name="HolidayFlyout" 
                                 Opened="HolidayFlyout_Opened" 
                                 Closed="HolidayFlyout_Closed" 
                                 AutomationProperties.ItemType="CheckBox"                                 
