--- a/Calendar/Calendar.Shared/App.xaml
+++ b/Calendar/Calendar.Shared/App.xaml
@@ -15,6 +15,10 @@
                     <SolidColorBrush x:Key="ListViewItemSelectedPointerOverBackgroundThemeBrush" Color="#ff303030" />
                     <SolidColorBrush x:Key="ButtonPointerOverBackgroundThemeBrush" Color="#FF5C5C5C" />
                     <SolidColorBrush x:Key="ButtonPointerOverForegroundThemeBrush" Color="White" />
+                    <SolidColorBrush x:Key="GridViewItemPointerOverBackgroundThemeBrush" Color="#4DFFFFFF" />
+                    <SolidColorBrush x:Key="GridViewItemSelectedBackgroundThemeBrush" Color="#ff303030" />
+                    <SolidColorBrush x:Key="GridViewItemSelectedForegroundThemeBrush" Color="#ff303030" />
+                    <SolidColorBrush x:Key="GridViewItemSelectedPointerOverBackgroundThemeBrush" Color="#ff303030" />
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
