--- a/Calendar/Calendar.Windows/SettingsPage.xaml
+++ b/Calendar/Calendar.Windows/SettingsPage.xaml
@@ -46,29 +46,26 @@
         </Grid>
 
         <!-- Элементы StackPanel ниже определяют отдельные разделы содержимого -->
-<StackPanel Orientation="Horizontal" Margin="0,120,0,10">
-        <ScrollViewer x:Name="leftSide"
+        <StackPanel Orientation="Horizontal" Margin="0,120,0,10">
+            <ScrollViewer x:Name="leftSide"
                       MinWidth="520"
                       VerticalScrollMode="Enabled" 
                       VerticalScrollBarVisibility="Disabled"
                       Margin="10" 
                       HorizontalAlignment="Left">
 
-            <StackPanel HorizontalAlignment="Left" Margin="5,5,20,5">
-
-                <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
+                <StackPanel HorizontalAlignment="Left" Margin="5,5,20,5">
+                    <!--<StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
                         HorizontalAlignment="Stretch" 
                         VerticalAlignment="Stretch" 
                         Margin="0,30,0,15"
                         Orientation="Horizontal">
-                    <!-- Заголовок раздела 1 -->
                     <TextBlock x:Uid="language" 
                            Height="auto" Width="350"
                            Margin="0,0,10,10"
                            HorizontalAlignment="Left"
                            Style="{StaticResource TitleTextBlockStyle}" 
                            FontSize="26" FontFamily="Minion Pro" />
-                    <!-- Основная часть раздела 1 -->
                     <ComboBox Name="comboLang" 
                           Width="140" Height="30" 
                           Margin="10,0,0,10" 
@@ -78,13 +75,12 @@
                         <ComboBoxItem Content="uk" ></ComboBoxItem>
                     </ComboBox>
 
-                    <!--<TextBlock x:Uid="dayOfWeek" 
+                    <TextBlock x:Uid="dayOfWeek" 
                            Height="40" Width="300"
                            HorizontalAlignment="Left"
                            Style="{StaticResource TitleTextBlockStyle}" 
                            FontSize="26" FontFamily="Minion Pro"
                            Margin="0, 15" />
-                    --><!-- Основная часть раздела 1 --><!--
                     <ComboBox Name="comboDOW" 
                           Width="140" Height="30" 
                           Margin="400,-65, 20,10" 
@@ -92,55 +88,59 @@
                           HorizontalAlignment="Left" >
                         <ComboBoxItem x:Uid="monday" IsSelected="True"></ComboBoxItem>
                         <ComboBoxItem x:Uid="sunday" ></ComboBoxItem>
-                    </ComboBox>-->
-                </StackPanel>
-                
-                <StackPanel x:Name="ThemeStack" Visibility="Collapsed" Orientation="Horizontal">
-                    <TextBlock x:Uid="selectThemeTop" 
+                    </ComboBox>
+                </StackPanel>-->
+
+                    <StackPanel x:Name="ThemeStack" 
+                                Visibility="Collapsed" 
+                                Orientation="Horizontal">
+                        <TextBlock x:Uid="selectThemeTop" 
                            Height="40" Width="350"
                            HorizontalAlignment="Left"
                            Style="{StaticResource TitleTextBlockStyle}" 
                            FontSize="26" FontFamily="Minion Pro"
                            Margin="0, 15" />
-                    <Button x:Uid="chooseBtn"
+                        <Button x:Uid="chooseBtn"
                             Name="buttonTheme" 
                             Click="buttonTheme_Click"
                           Width="140" Height="40" 
-                          Margin="10,0,20,0" 
+                          Margin="25,0,5,0" 
                           HorizontalAlignment="Left"
                           Background="#FF454545"
                           Foreground="#FFF6F6F9"/>
-                </StackPanel>                
-                
-                <!-- Раздел содержимого 2-->
-                <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
+                    </StackPanel>
+
+                    <!-- Раздел содержимого 2-->
+                    <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
                         Margin="0, 20"
                         HorizontalAlignment="Stretch" 
                         VerticalAlignment="Stretch"
                         Orientation="Horizontal">
-                    <!-- Заголовок раздела 2 -->
-                    <TextBlock x:Uid="tileHeader"
+                        <!-- Заголовок раздела 2 -->
+                        <!--toggle-->
+                        <!-- Заголовок раздела 2 -->
+                        <TextBlock x:Uid="tileHeader"
                            FontSize="26" 
                            FontFamily="Minion Pro" 
                            Height="30" Width="350"
                            HorizontalAlignment="Left"
                            Style="{StaticResource TitleTextBlockStyle}" 
                            />
-                    <!--toggle-->
-                    <ToggleSwitch Name="tileToggle" 
+                        <!--toggle-->
+                        <ToggleSwitch x:Name="tileToggle" 
                               Toggled="tileToggle_Toggled" 
                               HorizontalAlignment="Left" 
                               Margin="10, 0, 10, 0"
                               FontFamily="Minion Pro" FontSize="16"  />
 
-                </StackPanel>
+                    </StackPanel>
 
-                <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
+                    <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
                         HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                         Margin="0,20"
                         Orientation="Vertical">
-                    <!-- Заголовок раздела 3 -->
-                    <TextBlock x:Uid="toastHeader" 
+                        <!-- Заголовок раздела 3 -->
+                        <TextBlock x:Uid="toastHeader" 
                            Style="{StaticResource TitleTextBlockStyle}" 
                            FontSize="26" 
                            FontFamily="Minion Pro" 
@@ -148,8 +148,8 @@
                            Height="auto" Width="300"
                            HorizontalAlignment="Left"
                            />
-                    <!-- Основная часть раздела 3 -->
-                    <TextBlock x:Uid="toastText1" 
+                        <!-- Основная часть раздела 3 -->
+                        <TextBlock x:Uid="toastText1" 
                            Margin="0,10,0,30" 
                            TextWrapping="Wrap" 
                            LineHeight="25"
@@ -157,8 +157,8 @@
                            HorizontalAlignment="Left"
                            MaxWidth="500"
                            FontFamily="Minion Pro"/>
-                    <!--toggle-->
-                    <TextBlock x:Uid="daysText" 
+                        <!--toggle-->
+                        <TextBlock x:Uid="daysText" 
                            TextWrapping="Wrap" 
                            FontSize="22" 
                            VerticalAlignment="Top" 
@@ -167,7 +167,7 @@
                            FontFamily="Minion Pro"
                            HorizontalAlignment="Left"/>
 
-                    <TextBlock x:Uid="periodText" 
+                        <TextBlock x:Uid="periodText" 
                            TextWrapping="Wrap" 
                            FontSize="22" 
                            VerticalAlignment="Top" 
@@ -175,46 +175,46 @@
                            Margin="170,0,0,0"
                            FontFamily="Minion Pro"
                            HorizontalAlignment="Left"/>
-                    <ComboBox x:Name="comboToast" Height="30" Width="150" Margin="0,1,10,5" IsHoldingEnabled="False" ManipulationMode="None" VerticalAlignment="Stretch" HorizontalAlignment="Left">
-                        <ComboBoxItem x:Uid="c1" Width="110" IsSelected="True" />
-                        <ComboBoxItem x:Uid="c2" Width="110"/>
-                        <ComboBoxItem x:Uid="c3" Width="110"/>
-                        <ComboBoxItem x:Uid="c4" Width="110"/>
-                        <ComboBoxItem x:Uid="c5" Width="110"/>
-                    </ComboBox>
-                    <ComboBox x:Name="comboPeriod" Height="30" Width="150" Margin="170,-35,0,5" IsHoldingEnabled="False" HorizontalAlignment="Left" VerticalAlignment="Top" ManipulationMode="None">
-                        <ComboBoxItem Content="4" Width="110" IsSelected="True" />
-                        <ComboBoxItem Content="6" Width="110"/>
-                        <ComboBoxItem Content="8" Width="110"/>
-                        <ComboBoxItem Content="12" Width="110"/>
-                    </ComboBox>
-                    <ToggleSwitch Name="toastToggle"
+                        <ComboBox x:Name="comboToast" Height="30" Width="150" Margin="0,1,10,5" IsHoldingEnabled="False" ManipulationMode="None" VerticalAlignment="Stretch" HorizontalAlignment="Left">
+                            <ComboBoxItem x:Uid="c1" Width="110" IsSelected="True" />
+                            <ComboBoxItem x:Uid="c2" Width="110"/>
+                            <ComboBoxItem x:Uid="c3" Width="110"/>
+                            <ComboBoxItem x:Uid="c4" Width="110"/>
+                            <ComboBoxItem x:Uid="c5" Width="110"/>
+                        </ComboBox>
+                        <ComboBox x:Name="comboPeriod" Height="30" Width="150" Margin="170,-35,0,5" IsHoldingEnabled="False" HorizontalAlignment="Left" VerticalAlignment="Top" ManipulationMode="None">
+                            <ComboBoxItem Content="4" Width="110" IsSelected="True" />
+                            <ComboBoxItem Content="6" Width="110"/>
+                            <ComboBoxItem Content="8" Width="110"/>
+                            <ComboBoxItem Content="12" Width="110"/>
+                        </ComboBox>
+                        <ToggleSwitch Name="toastToggle"
                           Toggled="toastToggle_Toggled" 
                           HorizontalAlignment="Left" 
                           Margin="360,-50,0,20" 
                           FontFamily="Minion Pro" FontSize="16"/>
-                </StackPanel>
+                    </StackPanel>
 
-                <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
+                    <StackPanel Style="{StaticResource SettingsFlyoutSectionStyle}" 
                             Margin="0, 20"
                             HorizontalAlignment="Left" 
                             VerticalAlignment="Stretch"
                             MaxWidth="500"
                             >
-                    <!-- Заголовок раздела 4 -->
-                    <TextBlock x:Uid="buyMeTitle" 
+                        <!-- Заголовок раздела 4 -->
+                        <TextBlock x:Uid="buyMeTitle" 
                                Style="{StaticResource TitleTextBlockStyle}" 
                                FontSize="26" Margin="0, 0, 0, 5" 
                                FontFamily="Minion Pro"/>
-                    <TextBlock x:Uid="buyMeText" 
+                        <TextBlock x:Uid="buyMeText" 
                                Style="{StaticResource BodyTextBlockStyle}" 
                                FontSize="22" Margin="2,5,2,10" 
                                LineHeight="26"
                                FontFamily="Minion Pro"/>
-                    <!-- Основная часть раздела 4 -->
-                </StackPanel>
-                
-                <Button x:Uid="shopBtn" Name="buy"  
+                        <!-- Основная часть раздела 4 -->
+                    </StackPanel>
+
+                    <Button x:Uid="shopBtn" Name="buy"  
                     Click="Button_Click" FontSize="22"
                     BorderThickness="0"
                     Background="#ff303030"
@@ -224,11 +224,11 @@
                     Height="50" Width="140"
                     HorizontalContentAlignment="Center"
                     VerticalAlignment="Bottom"/>
-            </StackPanel>
-        </ScrollViewer>
+                </StackPanel>
+            </ScrollViewer>
 
-        <Grid x:Name="rightSide" >
-            <TextBlock x:Uid="selectThemeTop" 
+            <Grid x:Name="rightSide" >
+                <TextBlock x:Uid="selectThemeTop" 
                            Margin="10"
                            HorizontalAlignment="Center"
                            Style="{StaticResource TitleTextBlockStyle}" 
@@ -237,19 +237,19 @@
                            VerticalAlignment="Top"
                            />
 
-            <FlipView Name="smallThemesPreview"
+                <FlipView Name="smallThemesPreview"
                       Tapped="smallThemesPreview_Tapped"
                       HorizontalAlignment="Center"
                       VerticalAlignment="Top"
                       Padding="10, 0, 10, 50"
                       Margin="0, 50, 50, 10">
 
-                <FlipView.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Tag="{Binding Tag}"                                
+                    <FlipView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Tag="{Binding Tag}"                                
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Top">
-                            <TextBox x:Uid="clickToPreview"
+                                <TextBox x:Uid="clickToPreview"
                                  Height="40"
                                  IsReadOnly="True"
                                  Foreground="#ff303030"
@@ -261,15 +261,15 @@
                                  TextAlignment="Center"
                                  HorizontalAlignment="Stretch"
                                  VerticalAlignment="Top"/>
-                            <Image Source="{Binding Image}"
+                                <Image Source="{Binding Image}"
                                Stretch="Uniform"
                                />
-                        </StackPanel>
-                    </DataTemplate>
-                </FlipView.ItemTemplate>
-            </FlipView>
+                            </StackPanel>
+                        </DataTemplate>
+                    </FlipView.ItemTemplate>
+                </FlipView>
 
-            <Button Name="doneSmallBtn" x:Uid="ThemeBtn"
+                <Button Name="doneSmallBtn" x:Uid="ThemeBtn"
                 Click="doneBtn_Click"
                 Height="50" Width="140"
                 Margin="10, 20, 10, 50"
@@ -282,7 +282,7 @@
                 HorizontalContentAlignment="Center"
                 VerticalContentAlignment="Center"
                     />
-        </Grid>
+            </Grid>
 
         </StackPanel>
 
